--- a/blocks/popup/__name-input/popup__name-input.css
+++ b/blocks/popup/__name-input/popup__name-input.css
@@ -9,7 +9,7 @@
   margin: 0 0 30px 0;
   padding: 0;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2)
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 
