--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -3,5 +3,10 @@
   margin: 0;
 }
 
-
+@media screen and (max-width: 321px) {
+  .content {
+    margin-left: 19px;
+    margin-right: 19px;
+  }
+}
 
