--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,5 +4,11 @@
   background-color: #000000;
 }
 
+@media screen and (max-width: 321px) {
+  .page {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 
 
