--- a/blocks/place/__button/place__button.css
+++ b/blocks/place/__button/place__button.css
@@ -6,7 +6,11 @@
   height: 19px;
   background-image: url(../../../Image/place-heart.svg);
   background-color: #FFFFFF;
+  cursor: pointer;
 }
 
-
+.place__button:hover {
+  opacity: 0.5;
+  transition: opacity 0.4s linear;
+}
 
