--- a/blocks/popup/__form-submit/popup__form-submit.css
+++ b/blocks/popup/__form-submit/popup__form-submit.css
@@ -17,6 +17,11 @@
   cursor: pointer;
 }
 
+.popup__form-submit:hover {
+  opacity: 0.8;
+  transition: opacity 0.4s linear;
+}
+
 @media screen and (max-width: 490px) {
    .popup__form-submit {
     font-size: 14px;
