--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,20 @@
 .place__image {
   width: 100%;
+  height: 47vw;
+  max-height: 282px;
+  object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
 
+@media screen and (max-width: 762px) {
+  .place__image {
+    max-height: 353px;
+  }
+}
 
-
+@media screen and (max-width: 515px) {
+  .place__image {
+    max-height: 477px;
+    height: 93vw;
+  }
+}
