--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -13,7 +13,7 @@
   align-items: center;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 1s, opacity 1s linear;
+  transition: visibility 200ms, opacity 200ms linear;
 }
 
 
