--- a/src/blocks/popup/__job-input-error/popup__job-input-error.css
+++ b/src/blocks/popup/__job-input-error/popup__job-input-error.css
@@ -1,10 +1,10 @@
 .popup__job-input-error {
   position: absolute;
-  top: 183px;
-  left: 8.4%;
+  bottom: 34%;
+  left: 1px;
 }
 
-@media screen and (max-width: 562px) {
+/*@media screen and (max-width: 562px) {
   .popup__job-input-error {
     top: 211px;
   }
@@ -14,4 +14,4 @@
   .popup__job-input-error {
     top: 188px;
   }
-}
+}*/
