--- a/src/blocks/popup/__firstname-input-error/popup__firstname-input-error.css
+++ b/src/blocks/popup/__firstname-input-error/popup__firstname-input-error.css
@@ -1,17 +1,5 @@
 .popup__firstname-input-error {
   position: absolute;
-  top: 136px;
-  left: 8.4%;
-}
-
-@media screen and (max-width: 562px) {
-  .popup__firstname-input-error {
-    top: 163px;
-  }
-}
-
-@media screen and (max-width: 490px) {
-  .popup__firstname-input-error {
-    top: 139px;
-  }
+  bottom: 67%;
+  left: 1px;
 }
