--- a/src/blocks/place/__like-counter/place__like-counter.css
+++ b/src/blocks/place/__like-counter/place__like-counter.css
@@ -2,7 +2,7 @@
   margin: 3px 0 0 0;
   padding: 0;
   max-width: 10px;
-  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
